[tool.poetry]
name = "supra-sdk"
version = "0.1.0"
description = "Supra SDK"
authors = ["Supra Labs"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
homepage = "https://github.com/Entropy-Foundation/aptos-python-sdk/"
keywords = ["supra", "supra-l1", "supra-move", "move"]

[tool.setuptools.package-data]
"supra-sdk" = ["py.typed"]

[tool.poetry.dependencies]
ecdsa = "0.18.0"
python-graphql-client = "^0.4.3"
httpx = { extras = ["http2"], version = "^0.28.1" }
PyNaCl = "^1.5.0"
python = ">=3.12.0"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"
behave = "^1.2.6"
types-six = "^1.16.21.20240513"

[tool.poetry.dev-dependencies]
autoflake = "2.2.0"
black = "^24.3.0"
coverage = "^7.2.4"
flake8 = "7.0.0"
isort = "^5.10.1"
mypy = "^1.0.0"
mypy-extensions = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
